Fix: Correct full width rendering on mobile, by switching from negative margins to 100vw

--- a/public/blocks/_shared/components/Normalizer/Normalizer.scss
+++ b/public/blocks/_shared/components/Normalizer/Normalizer.scss
@@ -10,6 +10,11 @@
   &.full-width {
     margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
+
+    @media screen and (max-width: 600px) {
+      margin: 0;
+      width: 100vw;
+    }
   }
 
   * {
