--- a/public/blocks/text/Text/Text.module.scss
+++ b/public/blocks/text/Text/Text.module.scss
@@ -83,7 +83,7 @@
   }
 
   .container {
-    padding: 0;
+    padding: 0 1rem;
   }
 
   .content {
